--- a/recipes/grilled-pork-chops.html
+++ b/recipes/grilled-pork-chops.html
@@ -8,6 +8,23 @@
 </head>
 <body>
     <h1>Grilled Pork Chops</h1>
-    
+    <img src="https://imagesvc.meredithcorp.io/v3/mm/image?url=https%3A%2F%2Fimages.media-allrecipes.com%2Fuserphotos%2F9207677.jpg&w=595&h=595&c=sc&poi=face&q=60">
+    <h2> Description </h2>
+    <p> A quick and easy way to prepare flavorful grilled pork chops.</p>
+    <h3>Ingredients</h3>
+    <ul>
+        <li>4 (6 ounce) thin-cut bone-in pork chops</li>
+        <li>⅛ teaspoon cayenne pepper, or to taste (Optional)</li>
+        <li>1 pinch ground black pepper to taste</li>
+        <li>½ cup low-sodium soy sauce</li>
+        <li>2 cloves garlic, minced, or to taste</li>
+    </ul>
+    <h3>Steps</h3>
+    <ol>
+        <li>Season both sides of the pork chops with cayenne pepper and black pepper and lightly poke with a fork to make a few holes. Place pork in a casserole dish, pour soy sauce over top, and add garlic. Cover the dish with plastic wrap and marinate in the refrigerator for 1 hour, turning halfway through.</li>
+        <li>Preheat an outdoor grill for high heat and lightly oil the grate. </li>
+        <li>Remove chops from the marinade and shake off excess. Discard the remaining marinade. </li>
+        <li>Place chops on the preheated grill and reduce heat to medium. Cook until no longer pink in the center, about 6 minutes per side. An instant-read thermometer inserted into the center should read 145 degrees F (63 degrees C).</li>
+    </ol>
 </body>
 </html>
