--- a/index.html
+++ b/index.html
@@ -8,7 +8,11 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
-    <a href="./recipes/grilled-pork-chops.html"> Grilled Pork Chops </a>
+    <ul>
+        <li> <a href="./recipes/grilled-pork-chops.html"> Grilled Pork Chops </a></li>
+        <li><a href="./recipes/quick-air-fryer-chicken-parmesan.html">Quick Air Fryer Chicken Parmesan</a></li>
+    </ul>
+    
     
 </body>
 </html>
