--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <ul>
         <li> <a href="./recipes/grilled-pork-chops.html"> Grilled Pork Chops </a></li>
         <li><a href="./recipes/quick-air-fryer-chicken-parmesan.html">Quick Air Fryer Chicken Parmesan</a></li>
+        <li><a href="./recipes/crispy-ground-turkey-tostadas.html">Crispy Ground Turkey Tostadas</a></li>
     </ul>
     
     
