Add style to the pages

--- a/recipes/quick-air-fryer-chicken-parmesan.html
+++ b/recipes/quick-air-fryer-chicken-parmesan.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link href="../style.css" rel="stylesheet">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -21,7 +22,7 @@
         <li>1 tablespoon fresh basil, cut in very thin strips</li>
     </ul>
     <h3>Steps</h3>
-    <ol>
+    <ol class ="parmesan-ordered-list">
         <li>Preheat an air fryer to 400 degrees F (200 degrees C) for 5 minutes.</li>
         <li>Bring a large pot of lightly salted water to a boil. Cook spaghetti in the boiling water, stirring occasionally, until tender yet firm to the bite, about 12 minutes.</li>
         <li>Meanwhile, set 2 chicken fillets into the air fryer basket.</li>
