--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="style.css" rel="stylesheet">
     <title>Odin Recipes</title>
 </head>
 <body>
@@ -13,7 +14,5 @@
         <li><a href="./recipes/quick-air-fryer-chicken-parmesan.html">Quick Air Fryer Chicken Parmesan</a></li>
         <li><a href="./recipes/crispy-ground-turkey-tostadas.html">Crispy Ground Turkey Tostadas</a></li>
     </ul>
-    
-    
 </body>
 </html>
